feat: added hooks path alias

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,6 +20,9 @@
       "@/*": [
         "./src/*"
       ],
+      "@hooks/*": [
+        "./src/hooks/*"
+      ],
       "@mocks/*": [
         "./src/mocks/*"
       ]
