--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@hooks*": ["./src/hooks*"],
       "@mocks/*": ["./src/mocks*"]
     }
   }
