--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
     "sonner": "^2.0.7",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
