--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.71.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
     "sonner": "^2.0.7",
