--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.71.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
+    "react-spinners": "^0.17.0",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.16",
     "zustand": "^5.0.9"
