feat: added interface and mock for monthly stats

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@interfaces*": ["./src/interfaces*"],
       "@hooks*": ["./src/hooks*"],
       "@mocks/*": ["./src/mocks*"]
     }
