--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,9 @@
       "@hooks/*": [
         "./src/hooks/*"
       ],
+      "@interfaces/*": [
+        "./src/interfaces/*"
+      ],
       "@mocks/*": [
         "./src/mocks/*"
       ]
